--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.0",
     "prop-types": "^15.7.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
