--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
