--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "prop-types": "^15.7.2",
     "react": "^18",
     "react-dom": "^18",
