--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.3",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
